--- a/styles.css
+++ b/styles.css
@@ -62,3 +62,11 @@ h6 {
 .right-side {
   width: 60%;
 }
+
+.inputs {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 30px;
+  margin-right: 300px;
+  gap: 15px 70px;
+}
