--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,6 @@ h6 {
 
 .main-container {
   display: flex;
-
   justify-content: space-between;
   background-color: white;
 }
@@ -61,12 +60,35 @@ h6 {
 
 .right-side {
   width: 60%;
+  display: flex;
+  flex-direction: column;
 }
 
+.cta {
+  padding: 60px 40px;
+  font-size: 1.5rem;
+}
+.form {
+  background-color: #f5f5f1;
+  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+h2 {
+  padding-left: 40px;
+}
 .inputs {
   display: flex;
   flex-wrap: wrap;
-  margin-left: 30px;
-  margin-right: 300px;
+  margin-top: 30px;
   gap: 15px 70px;
+  padding-left: 40px;
+  padding-bottom: 40px;
+}
+
+.footer {
+  padding-top: 20px;
+  background-color: white;
+  padding-left: 40px;
 }
