--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,17 @@
 *::after {
   box-sizing: border-box;
 }
+
 * {
   margin: 0;
 }
+
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  height: 100%;
 }
+
 img,
 picture,
 video,
@@ -22,12 +26,14 @@ svg {
   display: block;
   max-width: 100%;
 }
+
 input,
 button,
 textarea,
 select {
   font: inherit;
 }
+
 p,
 h1,
 h2,
@@ -37,11 +43,13 @@ h5,
 h6 {
   overflow-wrap: break-word;
 }
+
 #root,
 #__next {
   isolation: isolate;
 }
 
+/* Global variables */
 :root {
   --system-ui: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
@@ -50,16 +58,21 @@ h6 {
 .main-container {
   display: flex;
   justify-content: space-between;
-  background-color: white;
+  background-color: #efbfb2;
+  min-height: 100vh;
+  height: 100%;
 }
 
 .left-side {
-  width: 40%;
+  width: 35%;
   background-image: url(pineapple.jpg);
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh;
 }
 
 .right-side {
-  width: 60%;
+  width: 65%;
   display: flex;
   flex-direction: column;
 }
@@ -68,9 +81,10 @@ h6 {
   padding: 60px 40px;
   font-size: 1.5rem;
 }
+
 .form {
   background-color: #f5f5f1;
-  padding-top: 30px;
+  padding: 30px 40px 0;
   display: flex;
   flex-direction: column;
 }
@@ -78,6 +92,7 @@ h6 {
 h2 {
   padding-left: 40px;
 }
+
 .inputs {
   display: flex;
   flex-wrap: wrap;
@@ -87,8 +102,12 @@ h2 {
   padding-bottom: 40px;
 }
 
+/* Footer styling */
 .footer {
-  padding-top: 20px;
-  background-color: white;
-  padding-left: 40px;
+  padding: 40px 0 0 40px;
+  font-size: 1.5rem;
+}
+
+button {
+  border-radius: 10px;
 }
