--- a/styles.css
+++ b/styles.css
@@ -79,33 +79,33 @@ h6 {
 
 .cta {
   padding: 60px 40px;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .form {
   background-color: #f5f5f1;
-  padding: 30px 40px 0;
+  padding: 30px 40px 40px;
   display: flex;
   flex-direction: column;
+  gap: 30px;
+}
+
+form {
+  display: flex;
+  gap: 100px;
 }
 
 h2 {
   padding-left: 40px;
 }
 
-.inputs {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 30px;
-  gap: 15px 70px;
-  padding-left: 40px;
-  padding-bottom: 40px;
-}
-
-/* Footer styling */
 .footer {
-  padding: 40px 0 0 40px;
-  font-size: 1.5rem;
+  padding: 30px 0 0 20px;
+  font-size: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 button {
