--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   height: 100%;
+  background-color: #42532a;
 }
 
 img,
@@ -58,9 +59,10 @@ h6 {
 .main-container {
   display: flex;
   justify-content: space-between;
-  background-color: #efbfb2;
+  background-color: #e1c28e;
   min-height: 100vh;
   height: 100%;
+  margin: 0 40px 0 40px;
 }
 
 .left-side {
@@ -79,15 +81,17 @@ h6 {
 
 .cta {
   padding: 60px 40px;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
+  color: #42532a;
 }
 
 .form {
-  background-color: #f5f5f1;
+  background-color: #e2e4e3;
   padding: 30px 40px 40px;
   display: flex;
   flex-direction: column;
   gap: 30px;
+  color: #42532a;
 }
 
 form {
@@ -101,13 +105,17 @@ h2 {
 
 .footer {
   padding: 30px 0 0 20px;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  color: #42532a;
+  gap: 20px;
 }
 
 button {
   border-radius: 10px;
+  color: #42532a;
+  background-color: #e2e4e3;
 }
